testsuite/tests/interpreter_errors/invalid_when_clause_return_type/test.out
main.adb

Error: Type error: expected Bool but got Str

let p = query p when "Hello"
                     ^^^^^^^

